# Prog_CanonicIndepFamily

./: Makefile.in  README  README.md  configure  configure.ac
old/: makefile
src/: CanonicIndependFamily.c  Makefile.am  Makefile.in
