# what flags you want to pass to the C compiler & linker
AM_CFLAGS = --pedantic -Wall -std=c99 -O2
AM_LDFLAGS = -lgmpxx -lgmp

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = CanonicIndependFamily.prog 
CanonicIndependentFamily_prog_SOURCES = CanonicIndependFamily.c
